apps/base/plex/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: plex
  labels:
    k8s.dimarco-server.site/scrape: "true"
