apps/base/plex/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      securityContext:
        fsGroup: 100
      containers:
        - name: plex
          image: plexinc/pms-docker:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 32400
              name: http
            - containerPort: 3005
              name: companion
            - containerPort: 8324
              name: roku
            - containerPort: 32469
              name: dlna
          livenessProbe:
            httpGet:
              path: /web
              port: 32400
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          readinessProbe:
            httpGet:
              path: /web
              port: 32400
              scheme: HTTP
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 5
            successThreshold: 1
          startupProbe:
            httpGet:
              path: /web
              port: 32400
              scheme: HTTP
            initialDelaySeconds: 180
            periodSeconds: 30
            timeoutSeconds: 10
            failureThreshold: 30
            successThreshold: 1
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "4Gi"
              cpu: "2000m"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: media
              mountPath: /data
            - name: device-dri
              mountPath: /dev/dri
              readOnly: true
            - name: dev-usb
              mountPath: /dev/bus/usb
              readOnly: true
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: transcode
          persistentVolumeClaim:
            claimName: plex-transcode-pvc
        - name: media
          persistentVolumeClaim:
            claimName: plex-media-pvc
        - name: device-dri
          hostPath:
            path: /dev/dri
        - name: dev-usb
          hostPath:
            path: /dev/bus/usb
